🐛 fix: 배치 중복 데이터 INSERT 방지 로직 추가